// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`athena-workgroup Snapshot Tests Athena Workgroup App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-athena-workgroup-main": {
    "Description": "(SO0320-athena-workgroup) Modern Data Architecture Accelerator. Version 1.1.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-athena-workgroup-main:bucket:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-athena-workgroup-main:bucket:name",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-athena-workgroup-main:kms:key:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-athena-workgroup-main:kms:key:id",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-athena-workgroup-main:workgroup:name",
        },
        "Value": "test-org-test-env-test-domain-test-athena-workgroup-main",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-athena-workgroup-main:managed-policy:someprefixwgusage:arn",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-athena-workgroup-main:managed-policy:someprefixwgusage:name",
        },
        "Value": {
          "Fn::Select": [
            1,
            {
              "Fn::Split": [
                "/",
                {
                  "Fn::Select": [
                    5,
                    {
                      "Fn::Split": [
                        ":",
                        {
                          "Ref": "REPLACED-CFN-LOGICAL-ID",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuesampleorginstance2generatedroledatascientistarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/sample-org/instance2/generated-role/data-scientist/arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/generated-role/data-scientist/id",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "BucketEncryption": {
            "ServerSideEncryptionConfiguration": [
              {
                "BucketKeyEnabled": true,
                "ServerSideEncryptionByDefault": {
                  "KMSMasterKeyID": {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                  "SSEAlgorithm": "aws:kms",
                },
              },
            ],
          },
          "BucketName": "test-org-test-env-test-domain-test-athena-workgroup-main",
          "PublicAccessBlockConfiguration": {
            "BlockPublicAcls": true,
            "BlockPublicPolicy": true,
            "IgnorePublicAcls": true,
            "RestrictPublicBuckets": true,
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "athena-workgroup",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-athena-workgroup-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "VersioningConfiguration": {
            "Status": "Enabled",
          },
        },
        "Type": "AWS::S3::Bucket",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "Bucket": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "s3:*",
                "Condition": {
                  "Bool": {
                    "aws:SecureTransport": "false",
                  },
                },
                "Effect": "Deny",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": [
                  {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                  {
                    "Fn::Join": [
                      "",
                      [
                        {
                          "Fn::GetAtt": [
                            "REPLACED-CFN-LOGICAL-ID",
                            "Arn",
                          ],
                        },
                        "/*",
                      ],
                    ],
                  },
                ],
              },
              {
                "Action": "s3:PutObject",
                "Condition": {
                  "StringEquals": {
                    "s3:x-amz-server-side-encryption": "AES256",
                  },
                },
                "Effect": "Deny",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
                "Sid": "DenyAES",
              },
              {
                "Action": "s3:PutObject",
                "Condition": {
                  "StringNotLikeIfExists": {
                    "s3:x-amz-server-side-encryption-aws-kms-key-id": {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                  },
                },
                "Effect": "Deny",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
                "Sid": "ForceKMS",
              },
              {
                "Action": [
                  "s3:GetObject*",
                  "s3:PutObject",
                  "s3:PutObjectTagging",
                  "s3:DeleteObject",
                  "s3:DeleteObjectVersion",
                ],
                "Condition": {
                  "StringLike": {
                    "aws:userId": [
                      "AROA123412512:*",
                    ],
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
                "Sid": "/_ReadWriteSuper",
              },
              {
                "Action": [
                  "s3:GetObject*",
                  "s3:PutObject",
                  "s3:PutObjectTagging",
                  "s3:DeleteObject",
                ],
                "Condition": {
                  "StringLike": {
                    "aws:userId": [
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser0",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser1",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser3",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser4",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                    ],
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/athena-results/*",
                    ],
                  ],
                },
                "Sid": "/athena-results_ReadWrite",
              },
              {
                "Action": [
                  "s3:PutObject*",
                  "s3:GetObject*",
                  "s3:DeleteObject*",
                ],
                "Condition": {
                  "StringNotLike": {
                    "aws:userId": [
                      "AROA123412512:*",
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser0",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser1",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser3",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser4",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                    ],
                  },
                },
                "Effect": "Deny",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
                "Sid": "BucketDeny",
              },
              {
                "Action": [
                  "s3:List*",
                  "s3:GetBucket*",
                ],
                "Condition": {
                  "StringLike": {
                    "aws:userId": [
                      "AROA123412512:*",
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser0",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser1",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser3",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser4",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                    ],
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": [
                  {
                    "Fn::Join": [
                      "",
                      [
                        {
                          "Fn::GetAtt": [
                            "REPLACED-CFN-LOGICAL-ID",
                            "Arn",
                          ],
                        },
                        "/*",
                      ],
                    ],
                  },
                  {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                ],
                "Sid": "BucketAllow",
              },
            ],
            "Version": "2012-10-17",
          },
        },
        "Type": "AWS::S3::BucketPolicy",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-athena-workgroup-main/bucket/arn",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-athena-workgroup-main/bucket/name",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AliasName": "alias/test-org-test-env-test-domain-test-athena-workgroup-main-key",
          "TargetKeyId": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::KMS::Alias",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Properties": {
          "EnableKeyRotation": true,
          "Enabled": true,
          "KeyPolicy": {
            "Statement": [
              {
                "Action": "kms:*",
                "Effect": "Allow",
                "Principal": {
                  "AWS": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":iam::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":root",
                      ],
                    ],
                  },
                },
                "Resource": "*",
              },
              {
                "Action": [
                  "kms:Decrypt",
                  "kms:Encrypt",
                  "kms:ReEncryptFrom",
                  "kms:ReEncryptTo",
                  "kms:GenerateDataKey",
                  "kms:GenerateDataKeyWithoutPlaintext",
                  "kms:GenerateDataKeyPair",
                  "kms:GenerateDataKeyPairWithoutPlaintext",
                ],
                "Condition": {
                  "StringLike": {
                    "aws:userId": [
                      "AROA123412512:*",
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser0",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser1",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser3",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser4",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                    ],
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": "*",
                "Sid": "test-org-test-env-test-domain-test-athena-workgroup-main-usage-stmt",
              },
              {
                "Action": [
                  "kms:Create*",
                  "kms:Describe*",
                  "kms:Enable*",
                  "kms:List*",
                  "kms:Put*",
                  "kms:Update*",
                  "kms:Revoke*",
                  "kms:Disable*",
                  "kms:Get*",
                  "kms:Delete*",
                  "kms:TagResource",
                  "kms:UntagResource",
                  "kms:ScheduleKeyDeletion",
                  "kms:CancelKeyDeletion",
                ],
                "Condition": {
                  "StringLike": {
                    "aws:userId": [
                      "AROA123412512:*",
                    ],
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": "*",
                "Sid": "test-org-test-env-test-domain-test-athena-workgroup-main-usage-stmt",
              },
              {
                "Action": [
                  "kms:Encrypt",
                  "kms:ReEncryptFrom",
                  "kms:ReEncryptTo",
                  "kms:GenerateDataKey",
                  "kms:GenerateDataKeyWithoutPlaintext",
                  "kms:GenerateDataKeyPair",
                  "kms:GenerateDataKeyPairWithoutPlaintext",
                ],
                "Effect": "Allow",
                "Principal": {
                  "Service": "s3.amazonaws.com",
                },
                "Resource": "*",
              },
            ],
            "Version": "2012-10-17",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "athena-workgroup",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-athena-workgroup-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::KMS::Key",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-athena-workgroup-main/kms/key/arn",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-athena-workgroup-main/kms/key/id",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "RoleResAthenaUser0": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "ServiceToken": {
            "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "roleRef": {
            "arn": {
              "Ref": "SsmParameterValuesampleorginstance2generatedroledatascientistarnC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "refId": "AthenaUser-0",
          },
        },
        "Type": "AWS::CloudFormation::CustomResource",
        "UpdateReplacePolicy": "Delete",
      },
      "RoleResAthenaUser1": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "ServiceToken": {
            "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "roleRef": {
            "arn": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":iam::",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":role/sample-org-dev-instance1-roles-data-scientist",
                ],
              ],
            },
            "refId": "AthenaUser-1",
          },
        },
        "Type": "AWS::CloudFormation::CustomResource",
        "UpdateReplacePolicy": "Delete",
      },
      "RoleResAthenaUser2": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "ServiceToken": {
            "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "roleRef": {
            "id": {
              "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "refId": "AthenaUser-2",
          },
        },
        "Type": "AWS::CloudFormation::CustomResource",
        "UpdateReplacePolicy": "Delete",
      },
      "RoleResAthenaUser3": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "ServiceToken": {
            "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "roleRef": {
            "arn": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":iam::",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":role/aws-reserved/sso.amazonaws.com/",
                  {
                    "Ref": "AWS::Region",
                  },
                  "/AWSReservedSSO_data_scientist12321421",
                ],
              ],
            },
            "immutable": true,
            "refId": "AthenaUser-3",
          },
        },
        "Type": "AWS::CloudFormation::CustomResource",
        "UpdateReplacePolicy": "Delete",
      },
      "RoleResAthenaUser4": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "ServiceToken": {
            "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "roleRef": {
            "name": "data_scientist",
            "refId": "AthenaUser-4",
            "sso": true,
          },
        },
        "Type": "AWS::CloudFormation::CustomResource",
        "UpdateReplacePolicy": "Delete",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-athena-workgroup-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-athena-workgroup) Modern Data Architecture Accelerator. Version 1.1.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "athenaworkgroup": {
        "Properties": {
          "Name": "test-org-test-env-test-domain-test-athena-workgroup-main",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "athena-workgroup",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-athena-workgroup-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "WorkGroupConfiguration": {
            "BytesScannedCutoffPerQuery": 10000000000,
            "EnforceWorkGroupConfiguration": true,
            "PublishCloudWatchMetricsEnabled": true,
            "ResultConfiguration": {
              "EncryptionConfiguration": {
                "EncryptionOption": "SSE_KMS",
                "KmsKey": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              },
              "OutputLocation": {
                "Fn::Join": [
                  "",
                  [
                    "s3://",
                    {
                      "Ref": "REPLACED-CFN-LOGICAL-ID",
                    },
                    "/athena-results/",
                  ],
                ],
              },
            },
          },
        },
        "Type": "AWS::Athena::WorkGroup",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-athena-workgroup-main/workgroup/name",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-athena-workgroup-main",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "",
          "ManagedPolicyName": "some-prefix-wg-usage",
          "Path": "/",
          "PolicyDocument": {
            "Statement": [
              {
                "Action": [
                  "athena:BatchGetQueryExecution",
                  "athena:ListDataCatalogs",
                  "athena:ListDatabases",
                  "athena:ListEngineVersions",
                  "athena:ListNamedQueries",
                  "athena:ListPreparedStatements",
                  "athena:ListQueryExecutions",
                  "athena:ListTableMetadata",
                  "athena:ListTagsForResource",
                  "athena:ListWorkGroups",
                  "athena:GetDataCatalog",
                  "athena:GetDatabase",
                  "athena:GetNamedQuery",
                  "athena:GetPreparedStatement",
                  "athena:GetQueryExecution",
                  "athena:GetQueryResults",
                  "athena:GetQueryResultsStream",
                  "athena:GetTableMetadata",
                  "athena:GetWorkGroup",
                  "athena:BatchGetNamedQuery",
                  "athena:StartQueryExecution",
                  "athena:StopQueryExecution",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":athena:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":workgroup/test-org-test-env-test-domain-test-athena-workgroup-main",
                    ],
                  ],
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "Roles": [
            {
              "Fn::Select": [
                1,
                {
                  "Fn::Split": [
                    "/",
                    {
                      "Fn::Select": [
                        5,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "SsmParameterValuesampleorginstance2generatedroledatascientistarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            "sample-org-dev-instance1-roles-data-scientist",
            {
              "Fn::Select": [
                1,
                {
                  "Fn::Split": [
                    "/",
                    {
                      "Fn::Select": [
                        5,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Fn::GetAtt": [
                                "RoleResAthenaUser2",
                                "arn",
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        "Type": "AWS::IAM::ManagedPolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-athena-workgroup-main/managed-policy/some-prefix-wg-usage/arn",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-athena-workgroup-main/managed-policy/some-prefix-wg-usage/name",
          "Tags": {
            "mdaa_cdk_app": "athena-workgroup",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-athena-workgroup-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::Select": [
              1,
              {
                "Fn::Split": [
                  "/",
                  {
                    "Fn::Select": [
                      5,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Ref": "REPLACED-CFN-LOGICAL-ID",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`athena-workgroup Snapshot Tests Athena Workgroup Stack Snapshot Test 1`] = `
{
  "Description": "(SO0320-athena-workgroup) Modern Data Architecture Accelerator. Version 1.1.0",
  "Outputs": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-athena-workgroup-main:bucket:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "Arn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-athena-workgroup-main:bucket:name",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-athena-workgroup-main:kms:key:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "Arn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-athena-workgroup-main:kms:key:id",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-athena-workgroup-main:workgroup:name",
      },
      "Value": "test-org-test-env-test-domain-test-athena-workgroup-main",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-athena-workgroup-main:managed-policy:someprefixwgusage:arn",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-athena-workgroup-main:managed-policy:someprefixwgusage:name",
      },
      "Value": {
        "Fn::Select": [
          1,
          {
            "Fn::Split": [
              "/",
              {
                "Fn::Select": [
                  5,
                  {
                    "Fn::Split": [
                      ":",
                      {
                        "Ref": "REPLACED-CFN-LOGICAL-ID",
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuesampleorginstance2generatedroledatascientistarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/sample-org/instance2/generated-role/data-scientist/arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/generated-role/data-scientist/id",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "BucketKeyEnabled": true,
              "ServerSideEncryptionByDefault": {
                "KMSMasterKeyID": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "SSEAlgorithm": "aws:kms",
              },
            },
          ],
        },
        "BucketName": "test-org-test-env-test-domain-test-athena-workgroup-main",
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "athena-workgroup",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-athena-workgroup-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:LINE:COL] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "Bucket": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "s3:x-amz-server-side-encryption": "AES256",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": "DenyAES",
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringNotLikeIfExists": {
                  "s3:x-amz-server-side-encryption-aws-kms-key-id": {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": "ForceKMS",
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:DeleteObject",
                "s3:DeleteObjectVersion",
              ],
              "Condition": {
                "StringLike": {
                  "aws:userId": [
                    "AROA123412512:*",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": "/_ReadWriteSuper",
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:DeleteObject",
              ],
              "Condition": {
                "StringLike": {
                  "aws:userId": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser0",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser1",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser3",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser4",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/athena-results/*",
                  ],
                ],
              },
              "Sid": "/athena-results_ReadWrite",
            },
            {
              "Action": [
                "s3:PutObject*",
                "s3:GetObject*",
                "s3:DeleteObject*",
              ],
              "Condition": {
                "StringNotLike": {
                  "aws:userId": [
                    "AROA123412512:*",
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser0",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser1",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser3",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser4",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": "BucketDeny",
            },
            {
              "Action": [
                "s3:List*",
                "s3:GetBucket*",
              ],
              "Condition": {
                "StringLike": {
                  "aws:userId": [
                    "AROA123412512:*",
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser0",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser1",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser3",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser4",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              ],
              "Sid": "BucketAllow",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "Name": "/test-org/test-domain/test-athena-workgroup-main/bucket/arn",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/datalake/athena-workgroup-l3-construct/lib/athena-workgroup-l3-construct.ts:LINE:COL] MDAA does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "Name": "/test-org/test-domain/test-athena-workgroup-main/bucket/name",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "AliasName": "alias/test-org-test-env-test-domain-test-athena-workgroup-main-key",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "EnableKeyRotation": true,
        "Enabled": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncryptFrom",
                "kms:ReEncryptTo",
                "kms:GenerateDataKey",
                "kms:GenerateDataKeyWithoutPlaintext",
                "kms:GenerateDataKeyPair",
                "kms:GenerateDataKeyPairWithoutPlaintext",
              ],
              "Condition": {
                "StringLike": {
                  "aws:userId": [
                    "AROA123412512:*",
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser0",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser1",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser3",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser4",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "test-org-test-env-test-domain-test-athena-workgroup-main-usage-stmt",
            },
            {
              "Action": [
                "kms:Create*",
                "kms:Describe*",
                "kms:Enable*",
                "kms:List*",
                "kms:Put*",
                "kms:Update*",
                "kms:Revoke*",
                "kms:Disable*",
                "kms:Get*",
                "kms:Delete*",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:ScheduleKeyDeletion",
                "kms:CancelKeyDeletion",
              ],
              "Condition": {
                "StringLike": {
                  "aws:userId": [
                    "AROA123412512:*",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "test-org-test-env-test-domain-test-athena-workgroup-main-usage-stmt",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncryptFrom",
                "kms:ReEncryptTo",
                "kms:GenerateDataKey",
                "kms:GenerateDataKeyWithoutPlaintext",
                "kms:GenerateDataKeyPair",
                "kms:GenerateDataKeyPairWithoutPlaintext",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "s3.amazonaws.com",
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "athena-workgroup",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-athena-workgroup-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-athena-workgroup-main/kms/key/arn",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-athena-workgroup-main/kms/key/id",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "RoleResAthenaUser0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ServiceToken": {
          "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "roleRef": {
          "arn": {
            "Ref": "SsmParameterValuesampleorginstance2generatedroledatascientistarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "refId": "AthenaUser-0",
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "RoleResAthenaUser1": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ServiceToken": {
          "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "roleRef": {
          "arn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/sample-org-dev-instance1-roles-data-scientist",
              ],
            ],
          },
          "refId": "AthenaUser-1",
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "RoleResAthenaUser2": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ServiceToken": {
          "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "roleRef": {
          "id": {
            "Ref": "SsmParameterValuetestorgtestdomaingeneratedroledatascientistidC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "refId": "AthenaUser-2",
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "RoleResAthenaUser3": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ServiceToken": {
          "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "roleRef": {
          "arn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/aws-reserved/sso.amazonaws.com/",
                {
                  "Ref": "AWS::Region",
                },
                "/AWSReservedSSO_data_scientist12321421",
              ],
            ],
          },
          "immutable": true,
          "refId": "AthenaUser-3",
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "RoleResAthenaUser4": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ServiceToken": {
          "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "roleRef": {
          "name": "data_scientist",
          "refId": "AthenaUser-4",
          "sso": true,
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/test-org/test-domain/test-athena-workgroup-main/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "(SO0320-athena-workgroup) Modern Data Architecture Accelerator. Version 1.1.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "athenaworkgroup": {
      "Properties": {
        "Name": "test-org-test-env-test-domain-test-athena-workgroup-main",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "athena-workgroup",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-athena-workgroup-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "WorkGroupConfiguration": {
          "BytesScannedCutoffPerQuery": 10000000000,
          "EnforceWorkGroupConfiguration": true,
          "PublishCloudWatchMetricsEnabled": true,
          "ResultConfiguration": {
            "EncryptionConfiguration": {
              "EncryptionOption": "SSE_KMS",
              "KmsKey": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
            },
            "OutputLocation": {
              "Fn::Join": [
                "",
                [
                  "s3://",
                  {
                    "Ref": "REPLACED-CFN-LOGICAL-ID",
                  },
                  "/athena-results/",
                ],
              ],
            },
          },
        },
      },
      "Type": "AWS::Athena::WorkGroup",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-athena-workgroup-main/workgroup/name",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "test-org-test-env-test-domain-test-athena-workgroup-main",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "",
        "ManagedPolicyName": "some-prefix-wg-usage",
        "Path": "/",
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "athena:BatchGetQueryExecution",
                "athena:ListDataCatalogs",
                "athena:ListDatabases",
                "athena:ListEngineVersions",
                "athena:ListNamedQueries",
                "athena:ListPreparedStatements",
                "athena:ListQueryExecutions",
                "athena:ListTableMetadata",
                "athena:ListTagsForResource",
                "athena:ListWorkGroups",
                "athena:GetDataCatalog",
                "athena:GetDatabase",
                "athena:GetNamedQuery",
                "athena:GetPreparedStatement",
                "athena:GetQueryExecution",
                "athena:GetQueryResults",
                "athena:GetQueryResultsStream",
                "athena:GetTableMetadata",
                "athena:GetWorkGroup",
                "athena:BatchGetNamedQuery",
                "athena:StartQueryExecution",
                "athena:StopQueryExecution",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":athena:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":workgroup/test-org-test-env-test-domain-test-athena-workgroup-main",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Roles": [
          {
            "Fn::Select": [
              1,
              {
                "Fn::Split": [
                  "/",
                  {
                    "Fn::Select": [
                      5,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Ref": "SsmParameterValuesampleorginstance2generatedroledatascientistarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
          "sample-org-dev-instance1-roles-data-scientist",
          {
            "Fn::Select": [
              1,
              {
                "Fn::Split": [
                  "/",
                  {
                    "Fn::Select": [
                      5,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "RoleResAthenaUser2",
                              "arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "Type": "AWS::IAM::ManagedPolicy",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-athena-workgroup-main/managed-policy/some-prefix-wg-usage/arn",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-athena-workgroup-main/managed-policy/some-prefix-wg-usage/name",
        "Tags": {
          "mdaa_cdk_app": "athena-workgroup",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-athena-workgroup-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::Select": [
            1,
            {
              "Fn::Split": [
                "/",
                {
                  "Fn::Select": [
                    5,
                    {
                      "Fn::Split": [
                        ":",
                        {
                          "Ref": "REPLACED-CFN-LOGICAL-ID",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
